--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "cordova-plugin-ble-central": "^1.1.4",
     "onsenui": "^2.9.1",
     "vue": "^2.5.0",
     "vue-onsenui": "^2.5.0",
@@ -97,5 +98,12 @@
     "Safari >= 9",
     "Firefox ESR",
     "Opera 12.1"
-  ]
+  ],
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-ble-central": {
+        "BLUETOOTH_USAGE_DESCRIPTION": "Connection to printer"
+      }
+    }
+  }
 }
