--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "onsenui": "^2.9.1",
     "vue": "^2.5.0",
     "vue-onsenui": "^2.5.0",
-    "vuex": "^3.0.0"
+    "vuex": "^3.0.0",
+    "xregexp": "^4.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
