--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "onsenui": "^2.9.1",
     "vue": "^2.5.0",
     "vue-onsenui": "^2.5.0",
+    "vuejs-logger": "1.3.4",
     "vuex": "^3.0.0",
     "xregexp": "^4.1.1"
   },
